<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">FoodCoApp</string>
  <string name="accounts">Accounts</string>
  <string name="transactions">Transactions</string>
  <string name="transaction">Transaction</string>
  <string name="product">Product</string>

  <string name="add">Add</string>
  <string name="view">View</string>
  <string name="done">Done</string>
  <string name="neues">New</string>
  <string name="edit">Edit</string>
  <string name="export">Export</string>
  <string name="importe">Import</string>
  <string name="balance">Bilanz</string>
  <string name="shopping">Einkaufen</string>

  <string name="volume">Liter</string>
  <string name="weight">Kilo</string>
  <string name="piece">Stück</string>
  <string name="per">pro</string>

  <string name="settings">Einstellungen</string>
  <string name="prefs_rotate_screen_title">Bildschirm rotieren</string>
  <string name="prefs_rotate_screen_summary">während der Pin Eingabe</string>
  <string name="prefs_negative_stocks_title">Minus Buchungen erlauben</string>
  <string name="prefs_negative_stocks_summary">negative Kassen-/Lagerbestände</string>
  <string name="prefs_email_title">Mail to</string>
  <string name="prefs_email_summary">Default Email Adresse für Backup Ex(cel)port</string>

  <string name="crash_toast_text">Sorry - crash happens :/</string>
  <string name="crash_dialog_text">Log als Email und Session wiederherstellen</string>
  <string name="crash_dialog_ok_toast">Danke!</string>
  <string name="deposit">Einzahlen</string>
  <string name="eur"> €</string>

  <string name="msg_deposit_cash">Ja, ich hab ein Kuvert mit %1$s EUR in die Barkasse gelegt.\n\n(beschriftet mit Namen und Mitgliedsnummer %2$s) \n\nAndernfalls will ich nicht %3$s heißen!</string>
  <string name="msg_deposit_bank">Ja, ich hab eine Überweisung von %1$s EUR \n(so gut wie) bereits längst schon veranlasst.\n\n(mit Verwendungszweck: Einzahlung %2$s \n\nAndernfalls will ich nicht %3$s heißen!</string>
  <string name="btn_yes">Ja</string>
  <string name="btn_no">Nein</string>

  <string name="member">Mitgliedsnummer</string>
  <string name="fee">Monatsbeitrag</string>
  <string name="restore_last_txn">Letzte Buchung wiederherstellen</string>
  <string name="export_reports">Berichte exportieren</string>
  <string name="since">seit %1$s</string>
  <string name="monthly_fee">Monatsbeitrag</string>
  <string name="fee_per_month">%1$s€ pro Monat</string>
  <string name="per_month">€ pro Monat</string>
  <string name="terminate">KÜNDIGEN</string>
  <string name="change">ÄNDERN</string>
  <string name="change_membership">Mitgliedschaft ändern\n(braucht Papier mit Unterschrift)</string>
  <string name="terminate_membership">Mitgliedschaft kündigen\n(braucht Papier mit Unterschrift)</string>
  <string name="session_restore">letzte Session wiederherstellen?</string>
    <string name="jahresabschluss">Jahresabschluss</string>

</resources>
