<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

  <PreferenceCategory android:title="@string/settings" >

    <CheckBoxPreference
      android:key="rotate_screen"
      android:title="@string/prefs_rotate_screen_title"
      android:summary="@string/prefs_rotate_screen_summary" />

    <CheckBoxPreference
      android:key="allow_negative_stocks"
      android:title="@string/prefs_negative_stocks_title"
      android:summary="@string/prefs_negative_stocks_summary" />

    <EditTextPreference
      android:key="export_email"
      android:title="@string/prefs_email_title"
      android:summary="@string/prefs_email_summary"
      android:defaultValue="flo@sonnenstreifen.de" />

  </PreferenceCategory>

  <PreferenceCategory android:title="Backup / Restore" >

    <Preference
      android:key="restore"
      android:title="@string/restore_last_txn" />

  </PreferenceCategory>

</PreferenceScreen>