<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/dark_blue"
  android:orientation="vertical"
  android:padding="@dimen/large" >

  <TextView
    android:id="@+id/message"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="2"
    android:textSize="@dimen/font_size_medium"
    android:textStyle="bold"
    android:gravity="center"
    android:text="@string/change_membership"
    android:layout_gravity="center" />

  <TextView
    android:id="@+id/since"
    android:clickable="true"
    android:focusable="true"
    android:background="@drawable/background_translucent"
    android:layout_width="wrap_content"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:textSize="@dimen/font_size_large"
    android:layout_gravity="center"
    android:text="ab 12/11/2016" />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="2" >

    <Button
      android:id="@+id/terminate"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/terminate" />

    <EditText
      android:id="@+id/fee"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:inputType="number|numberDecimal|"
      android:textSize="@dimen/font_size_xlarge"
      android:textStyle="bold"
      android:gravity="end"
      android:layout_weight="1"
      android:text="7"
      android:imeOptions="flagNoExtractUi" />

    <TextView
      android:id="@+id/unit"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="€ pro Monat" />

    <Button
      android:id="@+id/ok"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/change" />

  </LinearLayout>

</LinearLayout>